--- a/app/src/main/res/layout/activity_displayfavoriteevents.xml
+++ b/app/src/main/res/layout/activity_displayfavoriteevents.xml
@@ -9,7 +9,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_events"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
