--- a/app/src/main/res/menu/menu_favorites.xml
+++ b/app/src/main/res/menu/menu_favorites.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/m_favorites"
-        android:icon="@drawable/ic_star"
+        android:id="@+id/m_action_favorites"
+        android:icon="@drawable/ic_action_star"
         android:title="@string/my_favorites"
         app:showAsAction="ifRoom" />
 </menu>
