--- a/app/src/main/res/layout/activity_displayfavoriteevents.xml
+++ b/app/src/main/res/layout/activity_displayfavoriteevents.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.qornanali.footballclubkt.feature.favoritevent.DisplayFavoriteEventsActivity"
     android:orientation="vertical">
 
     <include layout="@layout/default_appbar" />
