--- a/app/src/main/res/menu/menu_events.xml
+++ b/app/src/main/res/menu/menu_events.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/ic_action_star"
         android:title="@string/my_favorites"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/m_action_search"
+        android:icon="@drawable/ic_action_search"
+        android:title="@string/search_events"
+        app:showAsAction="ifRoom" />
 </menu>
