--- a/app/src/main/res/layout/activity_leagueinfo.xml
+++ b/app/src/main/res/layout/activity_leagueinfo.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.qornanali.footballclubkt.feature.home.HomeActivity"
+    tools:context="com.qornanali.footballclubkt.feature.leagueinfo.LeagueInfoActivity"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
