--- a/app/src/main/res/layout/fragment_displaylastevents.xml
+++ b/app/src/main/res/layout/fragment_displaylastevents.xml
@@ -10,7 +10,7 @@
         android:layout_centerInParent="true" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_events"
+        android:id="@+id/rv_last_events"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone" />
