--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -2,25 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:paddingTop="8dp"
-    android:orientation="vertical">
+    android:paddingTop="8dp">
+
+    <ImageView
+        android:id="@+id/iv_player_image"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="16dp" />
 
     <TextView
-        android:id="@+id/tv_league_name"
+        android:id="@+id/tv_player_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_gravity="center_vertical"
         android:ellipsize="end"
-        android:maxLines="1"
+        android:lines="2"
+        android:maxLines="2"
         android:textColor="@color/colorBlack"
         android:textSize="18sp" />
-
-    <View
-        android:background="@color/colorGray"
-        android:layout_width="match_parent"
-        android:layout_height="0.75dp" />
 
 </LinearLayout>
